# pet-social

./: Dockerfile  docker-compose.yaml  pyproject.toml
src/pet_social/: main.py
